# SEAV2

./: Dockerfile  Hito2_Diseno_Conceptual.md  docker-compose.yml
carpeta_compartida/gallium/share/bpcg/: package.xml
carpeta_compartida/gallium/share/bpcg/cmake/: bpcgConfig.cmake
carpeta_compartida/gallium/share/camera_calibration_files/: package.xml
carpeta_compartida/gallium/share/camera_calibration_files/cmake/: camera_calibration_filesConfig.cmake
carpeta_compartida/gallium/share/cartesian_impedance_controller/: cartesian_impedance_controller_plugins.xml  package.xml
carpeta_compartida/gallium/share/cartesian_impedance_controller/cmake/: cartesian_impedance_controllerConfig.cmake
carpeta_compartida/gallium/share/contact_estimator/: contact_estimator_plugins.xml  package.xml
carpeta_compartida/gallium/share/contact_estimator/cmake/: contact_estimatorConfig.cmake
carpeta_compartida/gallium/share/corridor_exploration_msgs/: package.xml
carpeta_compartida/gallium/share/corridor_exploration_msgs/action/: CorridorExploration.action
carpeta_compartida/gallium/share/corridor_exploration_msgs/cmake/: corridor_exploration_msgs-msg-extras.cmake  corridor_exploration_msgs-msg-paths.cmake  corridor_exploration_msgsConfig.cmake
carpeta_compartida/gallium/share/corridor_exploration_msgs/msg/: CorridorExplorationAction.msg  CorridorExplorationActionFeedback.msg  CorridorExplorationActionGoal.msg  CorridorExplorationActionResult.msg  CorridorExplorationFeedback.msg  CorridorExplorationGoal.msg  CorridorExplorationResult.msg
carpeta_compartida/gallium/share/corridor_exploration_msgs/srv/: GetPose.srv
carpeta_compartida/gallium/share/cppad/: package.xml
carpeta_compartida/gallium/share/cppad/cmake/: cppadConfig.cmake
carpeta_compartida/gallium/share/current_limit_controller/: package.xml  ros_control_plugins.xml
carpeta_compartida/gallium/share/current_limit_controller/cmake/: current_limit_controllerConfig.cmake
carpeta_compartida/gallium/share/ddynamic_reconfigure_python/: package.xml
carpeta_compartida/gallium/share/ddynamic_reconfigure_python/cmake/: ddynamic_reconfigure_pythonConfig.cmake
carpeta_compartida/gallium/share/direct_laser_odometry/: package.xml
carpeta_compartida/gallium/share/direct_laser_odometry/cmake/: direct_laser_odometryConfig.cmake
carpeta_compartida/gallium/share/direct_laser_odometry/config/: params.yaml
carpeta_compartida/gallium/share/direct_laser_odometry/launch/: dlo.launch
carpeta_compartida/gallium/share/dll2d/: package.xml
carpeta_compartida/gallium/share/dll2d/cmake/: dll2dConfig.cmake
carpeta_compartida/gallium/share/doxygen_catkin/: package.xml
carpeta_compartida/gallium/share/doxygen_catkin/cmake/: doxygen_catkinConfig.cmake
carpeta_compartida/gallium/share/dynamic_footprint/: package.xml
carpeta_compartida/gallium/share/dynamic_footprint/cmake/: dynamic_footprint-msg-extras.cmake  dynamic_footprint-msg-paths.cmake  dynamic_footprintConfig.cmake
carpeta_compartida/gallium/share/dynamic_footprint/config/: reem_footprint_config_example.yaml
carpeta_compartida/gallium/share/dynamic_footprint/launch/: dynamic_footprint_publisher_reem_example.launch
carpeta_compartida/gallium/share/dynamic_footprint/srv/: ChangeParams.srv
carpeta_compartida/gallium/share/dynamixel_cpp/: package.xml
carpeta_compartida/gallium/share/dynamixel_cpp/cmake/: dynamixel_cppConfig.cmake
carpeta_compartida/gallium/share/eigen_checks/: package.xml
carpeta_compartida/gallium/share/eigen_checks/cmake/: eigen_checksConfig.cmake
carpeta_compartida/gallium/share/gravity_compensation_controller/: gravity_compensation_controller_plugins.xml  package.xml
carpeta_compartida/gallium/share/gravity_compensation_controller/cmake/: gravity_compensation_controllerConfig.cmake
carpeta_compartida/gallium/share/head_action/: package.xml
carpeta_compartida/gallium/share/head_action/cmake/: head_actionConfig.cmake
carpeta_compartida/gallium/share/highways_server/: package.xml
carpeta_compartida/gallium/share/highways_server/cmake/: highways_serverConfig.cmake
carpeta_compartida/gallium/share/highways_server/launch/: highways_server.launch
carpeta_compartida/gallium/share/legged_state_estimator/: legged_state_estimator_plugins.xml  package.xml
carpeta_compartida/gallium/share/legged_state_estimator/cmake/: legged_state_estimatorConfig.cmake
carpeta_compartida/gallium/share/math_utils/: package.xml
carpeta_compartida/gallium/share/math_utils/cmake/: math_utilsConfig-version.cmake  math_utilsConfig.cmake
carpeta_compartida/gallium/share/mbf_behaviortree/: package.xml
carpeta_compartida/gallium/share/mbf_behaviortree/cmake/: mbf_behaviortreeConfig.cmake
carpeta_compartida/gallium/share/mbf_behaviortree/launch/: navigator.launch
carpeta_compartida/gallium/share/mm11_msgs/: package.xml
carpeta_compartida/gallium/share/mm11_msgs/action/: Display.action
carpeta_compartida/gallium/share/mm11_msgs/cmake/: mm11_msgs-msg-extras.cmake  mm11_msgs-msg-paths.cmake  mm11_msgsConfig.cmake
carpeta_compartida/gallium/share/mm11_msgs/msg/: DisplayAction.msg  DisplayActionFeedback.msg  DisplayActionGoal.msg  DisplayActionResult.msg  DisplayEntry.msg  DisplayFeedback.msg  DisplayGoal.msg  DisplayResult.msg  Gpio.msg  Power.msg
carpeta_compartida/gallium/share/mm11_msgs/srv/: GetInputState.srv  GetOutputState.srv  SetLedState.srv  SetLedsBrightness.srv  (+7 more)
carpeta_compartida/gallium/share/navigation_core_library/: package.xml
carpeta_compartida/gallium/share/omni_drive_controller/: omni_drive_controller_plugins.xml  package.xml
carpeta_compartida/gallium/share/open_karto/: package.xml
carpeta_compartida/gallium/share/pal_app/: package.xml
carpeta_compartida/gallium/share/pal_ariles/: package.xml
carpeta_compartida/gallium/share/pal_base_ros_controller/: controller_plugins.xml  package.xml
carpeta_compartida/gallium/share/pal_camera_calibration_intrinsics/: package.xml
carpeta_compartida/gallium/share/pal_composite_navigation_msgs/: package.xml
carpeta_compartida/gallium/share/pal_controller_interface/: package.xml
(+1761 files in other folders)
