<package>
  <name>bpcg</name>
  <version>0.2.1</version>
  <description>Block PCG, using block Jacobi preconditioner</description>
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>
  <author>Kurt Konolige</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>boost</run_depend>
</package>
