<?xml version="1.0"?>
<package format="2">
  <name>camera_calibration_files</name>
  <version>0.0.5</version>
  <description>The camera_calibration_files package</description>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>pal_camera_calibration_intrinsics</exec_depend>
  <exec_depend>pal_camera_calibration_extrinsics</exec_depend>
</package>
