<?xml version="1.0"?>
<package format="2">
  <name>cartesian_impedance_controller</name>
  <version>0.0.2</version>
  <description>The cartesian_impedance_controller package</description>

  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>
  <author email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</author>
  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rbdl</depend>
  <depend>roscpp</depend>
  <depend>eigen_checks</depend>
  <depend>pluginlib</depend>
  <build_depend>pal_ros_utils</build_depend>
  <build_depend>pal_physics_utils</build_depend>
  <build_depend>pal_base_ros_controller</build_depend>
  <build_depend>ddynamic_reconfigure</build_depend>
  <exec_depend>ddynamic_reconfigure</exec_depend>
  <exec_depend>pal_base_ros_controller</exec_depend>
  <exec_depend>pal_ros_utils</exec_depend>
  <exec_depend>pal_physics_utils</exec_depend>
  <depend>std_msgs</depend>

  <export>
    <controller_interface plugin="${prefix}/cartesian_impedance_controller_plugins.xml" />
  </export>

</package>
