<?xml version="1.0"?>
<package format="2">
  <name>contact_estimator</name>
  <version>0.0.2</version>
  <description>The contact_estimator package</description>

  <maintainer email="adria.roig@pal-robotics.com">Adrià Roig</maintainer>

  <license>Proprietary</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>math_utils</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>pal_statistics</depend>
  <depend>rbdl</depend>
  <depend>pal_utils</depend>
  <depend>pal_physics_utils</depend>
  <depend>pal_controller_interface</depend>
  <depend>pluginlib</depend>

  <export>
     <contact_estimator plugin="${prefix}/contact_estimator_plugins.xml" />
  </export>


</package>
