<?xml version="1.0"?>
<package format="2">
  <name>cppad</name>
  <version>0.1.1</version>
  <description>The cppad package</description>

  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
