<?xml version="1.0"?>
<package>
  <name>current_limit_controller</name>
  <version>1.0.4</version>
  <description>
    Controller that allows to set the current limit for a group of actuators.
  </description>

  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</author>

  <license>LGPL-3.0</license>

  <!-- <url type="website">http://wiki.ros.org/${PROJECT_NAME}</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_interface</build_depend>
  <build_depend>pal_control_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pal_hardware_interfaces</build_depend>

  <run_depend>controller_interface</run_depend>
  <run_depend>pal_control_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pal_hardware_interfaces</run_depend>

  <export>
    <controller_interface plugin="${prefix}/ros_control_plugins.xml"/>
  </export>

</package>
