<?xml version="1.0"?>
<package format="2">
  <name>direct_laser_odometry</name>
  <version>1.0.2</version>
  <description>The direct_laser_odometry package</description>
  <author email="jose.garcia@pal-robotics.com">Jose Carlos Garcia Moreno</author>
  <maintainer email="jose.garcia@pal-robotics.com">Jose Carlos Garcia Moreno</maintainer>
  <license>Propietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dll2d</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>libceres-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>navigation_core_library</depend>
  <depend>roscpp</depend>
  <depend>scan_quality_estimator</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>pal_test_utils</test_depend>
  <test_depend>rosbag</test_depend>
</package>
