<?xml version="1.0"?>
<package>
  <name>dynamic_footprint</name>
  <version>0.0.14</version>
  <description>
    Dynamic footprint by computing the convex hull of a set of
    joints in a robot.
  </description>

  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>python-numpy</run_depend>
</package>
