<?xml version="1.0"?>
<package>
  <name>dynamixel_cpp</name>
  <version>0.0.8</version>
  <description>The dynamixel_cpp package</description>
  <maintainer email="bence.magyar@pal-robotics.com">Bence Magyar</maintainer>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
