<?xml version="1.0"?>
<package>
  <name>eigen_checks</name>
  <version>0.0.9</version>
  <description>The eigen_checks package</description>

  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tomé</maintainer>
  <author>Simon Lynen</author>
  
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen</run_depend>
  
  <export>
  </export>
  
</package>
