<?xml version="1.0"?>
<package format="2">
  <name>gravity_compensation_controller</name>
  <version>0.0.6</version>
  <description>The gravity_compensation_controller package</description>

  <maintainer email="hilariotome@todo.todo">hilariotome</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>hardware_interface</depend>
  <depend>interactive_markers</depend>
  <depend>rbdl</depend>
  <depend>roscpp</depend>
  <depend>dynamic_introspection</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>message_generation</depend>
  <depend>eigen_checks</depend>
  <depend>pal_ros_control</depend>
  <depend>pal_hardware_interfaces</depend>
  <depend>pal_base_ros_controller</depend>
  <depend>pluginlib</depend>
  <depend>pal_ros_utils</depend>
  <depend>std_msgs</depend>

  <export>
    <controller_interface plugin="${prefix}/gravity_compensation_controller_plugins.xml" />
  </export>

</package>
