<package format="3">
  <name>head_action</name>
  <version>1.0.1</version>
  <description>The head action is a node that provides an action interface for
  pointing the head of the configured robot. It passes trajectory goals to the
  controller, and reports success when they have finished executing.</description>
  <maintainer email="bence.magyar@pal-robotics.com">Bence Magyar</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/head_action</url>

  <author>Stuart Glaser</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">orocos_kdl</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">liborocos-kdl-dev</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>control_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">orocos_kdl</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">liborocos-kdl</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>control_msgs</exec_depend>
</package>

