<?xml version="1.0"?>
<package format="2">
  <name>highways_server</name>
  <version>2.0.3</version>
  <description>Highways map server</description>

  <maintainer email="antonio.brandi@pal-robotics.com">Antonio Brandi</maintainer>
  <author email="procopio.stein@pal-robotics.com">Procopio Stein</author>
  <author email="antonio.brandi@pal-robotics.com">Antonio Brandi</author>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pal_map_utils</build_depend>
  <build_depend>pal_map_server</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>pal_map_utils</exec_depend>
  <exec_depend>pal_map_server</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

</package>
