<?xml version="1.0"?>
<package format="2">
  <name>legged_state_estimator</name>
  <version>0.4.0</version>
  <description>The legged_state_estimator package</description>

  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer>

  <license>Propietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pal_state_estimation_core</depend>
  <depend>pluginlib</depend>
  <depend>backward_ros</depend>
  <depend>pal_physics_utils</depend>

  <test_depend>eigen_checks</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>pal_test_utils</test_depend>
  <test_depend>talos_description</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <legged_state_estimator plugin="${prefix}/legged_state_estimator_plugins.xml" />
  </export>

</package>
