<?xml version="1.0"?>
<package format="2">
  <name>math_utils</name>
  <version>0.1.48</version>
  <description>The math_utils package</description>

  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>
  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer>

  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <depend>roscpp</depend>
  <depend>sophus</depend>
  <depend>kindr_ros</depend>
  <depend>pal_utils</depend>
  <depend>pal_geometry_tools</depend>
  <depend>sensor_msgs</depend>
  <depend>pal_ariles</depend>
  <depend>backward_ros</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>dynamic_introspection</depend>
  <depend>pal_statistics</depend>

  <test_depend>rostest</test_depend>
  <test_depend>pal_test_utils</test_depend>
  <test_depend>control_toolbox</test_depend>
  <test_depend>eigen_checks</test_depend>
  <test_depend>rt_loss_detector</test_depend>

  <export>
  </export>
</package>
