<?xml version="1.0"?>
<package format="2">
    <name>mbf_behaviortree</name>
    <version>1.0.6</version>
    <description>The mbf_behaviortree package</description>

    <author email="jose.garcia@pal-robotics.com">Jose Carlos Garcia</author>
    <maintainer email="jose.garcia@pal-robotics.com">Jose Carlos Garcia</maintainer>

    <license>Propietary</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>roscpp</exec_depend>

    <depend>actionlib</depend>
    <depend>behaviortree_cpp_v3</depend>
    <depend>geometry_msgs</depend>
    <depend>mbf_costmap_nav</depend>
    <depend>mbf_msgs</depend>
    <depend>move_base_msgs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>navigation_core_library</depend>
    <depend>zeromq</depend>
    <depend>global_planner</depend>
    <depend>costmap_2d</depend>

    <test_depend>rostest</test_depend>
    <test_depend>pal_test_utils</test_depend>
    <test_depend>nav_msgs</test_depend>

</package>
