<?xml version="1.0"?>
<package format="2">
  <name>mm11_msgs</name>
  <version>2.4.4</version>
  <description>The mm11_msgs package</description>

  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>

  <license>Proprietary</license>

  <author email="jordan.palacios@pal-robotics.com">Jordan Palacios</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

</package>
