<?xml version="1.0"?>
<package format="2">
  <name>navigation_core_library</name>
  <version>2.0.1</version>
  <description>The navigation_core_library package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pal@todo.todo">pal</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pal_map_utils</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pal_map_utils</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>libpcl-all</exec_depend>

  <test_depend>pal_test_utils</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
