<package format="2">
  <name>omni_drive_controller</name>
  <version>0.0.8</version>
  <description>Controller for a omnidirectional drive mobile base.</description>
  <maintainer email="antonio.brandi@pal-robotics.com">Antonio Brandi</maintainer>

  <license>Proprietary</license>

  <url type="website">https://github.com/ros-controls/ros_controllers/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url>

  <author email="antonio.brandi@pal-robotics.com">Antonio Brandi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nav_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>diff_drive_controller</depend>

  <test_depend>controller_manager</test_depend>
  <test_depend>joint_state_controller</test_depend>
  <test_depend>rosgraph_msgs</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <controller_interface plugin="${prefix}/omni_drive_controller_plugins.xml"/>
  </export>
</package>
