<?xml version="1.0"?>
<package format="2">
  <name>open_karto</name>
  <version>2.0.4</version>
  <description>Release-package for OpenKarto</description>

  <maintainer email="swirth@willowgarage.com">Stephan Wirth</maintainer>
  <maintainer email="procopio.stein@pal-robotics.com">Procopio Stein</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>backward_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

</package>
