<?xml version="1.0"?>
<package format="2">
  <name>pal_ariles</name>
  <version>1.0.1</version>
  <description>A wrapper for ariles serialization/configuration library</description>

  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
  <depend>rapidjson-dev</depend>
  <depend>boost</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
