<?xml version="1.0"?>
<package format="2">
  <name>pal_camera_calibration_intrinsics</name>
  <version>0.0.3</version>
  <description>The pal_camera_calibration_intrinsics package</description>

  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>

  <license>Propietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
