<?xml version="1.0"?>
<package format="2">
  <name>pal_composite_navigation_msgs</name>
  <version>0.0.2</version>
  <description>The pal_composite_navigation_msgs package</description>

  <maintainer email="victor.lopez@pal-robotics.com">victor</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
