<?xml version="1.0"?>
<package format="2">
  <name>pal_controller_interface</name>
  <version>0.1.0</version>
  <description>The pal_controller_interface package</description>

  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>
  <author email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>hardware_interface</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
